--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ find_package(Qt4 4.5.1 COMPONENTS QtCore QtGui REQUIRED )
 include(${QT_USE_FILE} )
 link_directories (${QT_LIBRARY_DIR})
 
-SET(MOC_HEADERS  ./MainWindow.hpp ./FFMPEG.hpp )
+SET(MOC_HEADERS  ./MainWindow.hpp ./FFMPEG.hpp ./ChooseParameters.hpp )
 
 QT4_WRAP_CPP(MOC_SRCS ${MOC_HEADERS} )
 
@@ -17,7 +17,7 @@ find_package(FFMPEG)
 include_directories(${FFMPEG_INCLUDE_DIR})
 link_directories(${FFMPEG_LIBRARY_DIR})
 
-Add_Executable(main main.cpp MainWindow  FFMPEG ${MOC_SRCS})  
+Add_Executable(main main.cpp MainWindow.cpp ChooseParameters.cpp  FFMPEG ${MOC_SRCS})  
 TARGET_LINK_LIBRARIES( main ${FFMPEG_LIBRARIES} ${QT_LIBRARIES} ) #${FFMPEG_LIBRARIES} ${QT_LIBRARIES} )
 
 
