перед обьединение классов для отображения инфы о файле и выборе нужных кодеков

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@
 /ChooseParameters.cpp~
 /ChooseParameters.hpp~
 /moc_CodecSelection.cxx
+/CMakeFiles/main.dir/ChooseParameters.cpp.o
+/CMakeFiles/main.dir/moc_ChooseParameters.cxx.o
+/moc_ChooseParameters.cxx
