разбил на несколько файлов и косметические изменения в FFMPEG

--- a/.gitignore
+++ b/.gitignore
@@ -1,57 +1,9 @@
 /CMakeCache.txt
-/CMakeFiles/CMakeCCompiler.cmake
-/CMakeFiles/CMakeCXXCompiler.cmake
-/CMakeFiles/CMakeDetermineCompilerABI_C.bin
-/CMakeFiles/CMakeDetermineCompilerABI_CXX.bin
-/CMakeFiles/CMakeDirectoryInformation.cmake
-/CMakeFiles/CMakeError.log
-/CMakeFiles/CMakeOutput.log
-/CMakeFiles/CMakeRuleHashes.txt
-/CMakeFiles/CMakeSystem.cmake
-/CMakeFiles/CompilerIdC/CMakeCCompilerId.c
-/CMakeFiles/CompilerIdC/a.out
-/CMakeFiles/CompilerIdCXX/CMakeCXXCompilerId.cpp
-/CMakeFiles/CompilerIdCXX/a.out
-/CMakeFiles/Makefile.cmake
-/CMakeFiles/Makefile2
-/CMakeFiles/cmake.check_cache
-/CMakeFiles/main.dir/CXX.includecache
-/CMakeFiles/main.dir/DependInfo.cmake
-/CMakeFiles/main.dir/FFMPEG.cpp.o
-/CMakeFiles/main.dir/MainWindow.cpp.o
-/CMakeFiles/main.dir/build.make
-/CMakeFiles/main.dir/cmake_clean.cmake
-/CMakeFiles/main.dir/depend.internal
-/CMakeFiles/main.dir/depend.make
-/CMakeFiles/main.dir/flags.make
-/CMakeFiles/main.dir/link.txt
-/CMakeFiles/main.dir/main.cpp.o
-/CMakeFiles/main.dir/moc_FFMPEG.cxx.o
-/CMakeFiles/main.dir/moc_MainWindow.cxx.o
-/CMakeFiles/main.dir/progress.make
-/CMakeFiles/progress.make
-/CMakeLists.txt~
-/FFMPEG.cpp~
-/FFMPEG.hpp~
-/FindFFMPEG.cmake~
-/MainWindow.cpp~
-/MainWindow.hpp~
-/MainWindow.o
-/MyWidget.cpp~
-/MyWidget.hpp~
-/cmake_install.cmake
-/ffmpeg.cpp~
+/CMakeFiles/*
+/*~
+/*.o
+/*.cxx.o
+/*.cxx
 /main
-/main.cpp~
-/main.o
-/moc_FFMPEG.cxx
-/moc_MainWindow.cxx
-/CMakeFiles/main.dir/CodecSelection.cpp.o
-/CMakeFiles/main.dir/moc_CodecSelection.cxx.o
-/ChooseParameters
-/ChooseParameters.cpp~
-/ChooseParameters.hpp~
-/moc_CodecSelection.cxx
-/CMakeFiles/main.dir/ChooseParameters.cpp.o
-/CMakeFiles/main.dir/moc_ChooseParameters.cxx.o
-/moc_ChooseParameters.cxx
+
+/cmake_install.cmake
