дописал выбор выходного файла

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,15 +9,20 @@ find_package(Qt4 4.5.1 COMPONENTS QtCore QtGui REQUIRED )
 include(${QT_USE_FILE} )
 link_directories (${QT_LIBRARY_DIR})
 
-SET(MOC_HEADERS  ./MainWindow.hpp ./FFMPEG.hpp ./ChooseParameters.hpp ./ChooseAudioCodec.hpp ./ChooseVideoCodec.hpp ./ChooseFileFormat.hpp )
+SET(MOC_HEADERS  ./MainWindow.hpp ./FFMPEG.hpp ./ChooseParameters.hpp ./ChooseAudioCodec.hpp ./ChooseVideoCodec.hpp ./ChooseFileFormat.hpp ./Utils.hpp)
+
+SET( UIS
+./example.ui
+)
 
 QT4_WRAP_CPP(MOC_SRCS ${MOC_HEADERS} )
+QT4_WRAP_UI(UI_HEADERS ${UIS})
 
 find_package(FFMPEG)
 include_directories(${FFMPEG_INCLUDE_DIR})
 link_directories(${FFMPEG_LIBRARY_DIR})
 
-Add_Executable(main main.cpp MainWindow.cpp  ChooseParameters.cpp ChooseAudioCodec.cpp ChooseVideoCodec.cpp ChooseFileFormat.cpp FFMPEG ${MOC_SRCS})  
+Add_Executable(main main.cpp MainWindow.cpp  ChooseParameters.cpp ChooseAudioCodec.cpp ChooseVideoCodec.cpp ChooseFileFormat.cpp Utils.cpp FFMPEG ${UI_HEADERS}  ${MOC_SRCS})
 TARGET_LINK_LIBRARIES( main ${FFMPEG_LIBRARIES} ${QT_LIBRARIES} ) #${FFMPEG_LIBRARIES} ${QT_LIBRARIES} )
 
 
