нарисовал выбор видео кодека TODO:: очерёдность параметров важна, её надо как-то соблюдать

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ SET(MOC_HEADERS  ./MainWindow.hpp ./FFMPEG.hpp ./ChooseParameters.hpp ./ChooseAu
 
 SET( UIS
 ./ChooseFileFormat.ui
+./ChooseVideoCodec.ui
 )
 
 QT4_WRAP_CPP(MOC_SRCS ${MOC_HEADERS} )
